--- a/handlers/templates/pages/upload.html
+++ b/handlers/templates/pages/upload.html
@@ -149,7 +149,9 @@
     }
 
     document.querySelector(".file-input").addEventListener("change", (evt) => {
-      doUpload(evt.target.files[0]);
+      for (const file of evt.target.files) {
+        doUpload(file);
+      }
     });
 
     uploadForm.addEventListener("drop", (evt) => {
@@ -271,7 +273,7 @@
   <div id="upload-form">
     <div class="file is-boxed">
       <label class="file-label">
-        <input class="file-input" type="file" />
+        <input class="file-input" type="file" multiple/>
         <span class="file-cta">
           <span class="file-icon">
             <i class="fas fa-upload"></i>
