Allow notes in guest share

--- a/handlers/templates/pages/upload.html
+++ b/handlers/templates/pages/upload.html
@@ -283,7 +283,7 @@
       </label>
     </div>
 
-    <textarea id="pastebox" class="mt-5"></textarea>
+    <!-- <textarea id="pastebox" class="mt-5"></textarea> -->
 
     {{ if gt (len .ExpirationOptions) 0 }}
       <div class="field my-5 expiration-container">
@@ -310,7 +310,7 @@
       </div>
     {{ end }}
 
-    {{ if not .GuestLinkMetadata.ID }}
+    <!-- {{ if not .GuestLinkMetadata.ID }} -->
       <div class="field my-5">
         <label class="label">Note <i>(optional)</i></label>
         <div class="control">
@@ -324,7 +324,7 @@
         </div>
         <p class="help">Note is only visible to you</p>
       </div>
-    {{ end }}
+    <!-- {{ end }} -->
   </div>
 
   <progress
