--- a/handlers/templates/pages/upload.html
+++ b/handlers/templates/pages/upload.html
@@ -284,19 +284,6 @@
     </div>
 
     <!-- <textarea id="pastebox" class="mt-5"></textarea> -->
-    <div class="field my-5">
-      <label class="label">Note <i>(optional)</i></label>
-      <div class="control">
-        <input
-          id="note"
-          class="input is-normal"
-          type="text"
-          placeholder="For Joe at ExampleCo"
-          maxlength="{{ .MaxNoteLength }}"
-        />
-      </div>
-      <p class="help">Note is only visible to you</p>
-    </div>
 
     {{ if gt (len .ExpirationOptions) 0 }}
       <div class="field my-5 expiration-container">
@@ -323,8 +310,21 @@
       </div>
     {{ end }}
 
-    <!-- {{ if not .GuestLinkMetadata.ID }} -->
-    <!-- {{ end }} -->
+    {{ if not .GuestLinkMetadata.ID }}
+      <div class="field my-5">
+        <label class="label">Note <i>(optional)</i></label>
+        <div class="control">
+          <input
+            id="note"
+            class="input is-normal"
+            type="text"
+            placeholder="For Joe at ExampleCo"
+            maxlength="{{ .MaxNoteLength }}"
+          />
+        </div>
+        <p class="help">Note is only visible to you</p>
+      </div>
+    {{ end }}
   </div>
 
   <progress
